tests-integration/fixtures/checking/161_derive_bifoldable_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
WrapBoth ::
  forall (t6 :: Type) (t10 :: Type) (f :: (t6 :: Type) -> Type) (g :: (t10 :: Type) -> Type)
    (a :: (t6 :: Type)) (b :: (t10 :: Type)).
    (f :: (t6 :: Type) -> Type) (a :: (t6 :: Type)) ->
    (g :: (t10 :: Type) -> Type) (b :: (t10 :: Type)) ->
    WrapBoth @(t6 :: Type) @(t10 :: Type)
      (f :: (t6 :: Type) -> Type)
      (g :: (t10 :: Type) -> Type)
      (a :: (t6 :: Type))
      (b :: (t10 :: Type))
WrapBothNoConstraint ::
  forall (t18 :: Type) (t22 :: Type) (f :: (t18 :: Type) -> Type) (g :: (t22 :: Type) -> Type)
    (a :: (t18 :: Type)) (b :: (t22 :: Type)).
    (f :: (t18 :: Type) -> Type) (a :: (t18 :: Type)) ->
    (g :: (t22 :: Type) -> Type) (b :: (t22 :: Type)) ->
    WrapBothNoConstraint @(t18 :: Type) @(t22 :: Type)
      (f :: (t18 :: Type) -> Type)
      (g :: (t22 :: Type) -> Type)
      (a :: (t18 :: Type))
      (b :: (t22 :: Type))

Types
WrapBoth ::
  forall (t6 :: Type) (t10 :: Type).
    ((t6 :: Type) -> Type) -> ((t10 :: Type) -> Type) -> (t6 :: Type) -> (t10 :: Type) -> Type
WrapBothNoConstraint ::
  forall (t18 :: Type) (t22 :: Type).
    ((t18 :: Type) -> Type) -> ((t22 :: Type) -> Type) -> (t18 :: Type) -> (t22 :: Type) -> Type

Data
WrapBoth
  Quantified = :2
  Kind = :0

WrapBothNoConstraint
  Quantified = :2
  Kind = :0


Roles
WrapBoth = [Representational, Representational, Nominal, Nominal]
WrapBothNoConstraint = [Representational, Representational, Nominal, Nominal]

Derived
derive (Foldable (f :: Type -> Type), Foldable (g :: Type -> Type)) => Bifoldable (WrapBoth @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type -> Type)
derive Bifoldable (WrapBothNoConstraint @Type @Type (f :: Type -> Type) (g :: Type -> Type) :: Type -> Type -> Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Foldable (f :: Type -> Type)
  --> 10:1..10:54
   |
10 | derive instance Bifoldable (WrapBothNoConstraint f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Foldable (g :: Type -> Type)
  --> 10:1..10:54
   |
10 | derive instance Bifoldable (WrapBothNoConstraint f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
